Add attribution to template

--- a/templates/store/generator.html
+++ b/templates/store/generator.html
@@ -113,4 +113,5 @@ $(document).on('click', '.remove-form-row', function(e){
 });
 
 </script>
+<!-- Thanks to https://github.com/taranjeet/django-library-app for the base HTML templates + other code modified to make this web app. -->
 {% endblock %}
