--- a/store/templates/store/generator.html
+++ b/store/templates/store/generator.html
@@ -32,6 +32,22 @@
             {{form.fieldtype}}
         </div>
     </div>
+    <div class="col-2">
+        <label>{{form.required.label}}</label>
+    </div>
+    <div class="col-4 mt-2">
+        <div class="input-group">
+            {{form.required}}
+        </div>
+    </div>
+    <div class="col-2">
+        <label>{{form.example.label}}</label>
+    </div>
+    <div class="col-4">
+        <div class="input-group">
+            {{form.example}}
+        </div>
+    </div>
 </div>
 <hr>
 {% endfor %}
